--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>diego-rg</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container p-5">
-            <a class="navbar-brand" href="#">diego-rg</a>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark lead p-0">
+        <div class="container p-lg-5 p-4">
+            <a class="navbar-brand fs-3" href="#">diego-rg</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -35,8 +38,8 @@
         </div>
     </nav>
 
-    <section class="bg-dark text-light p-5 text-center text-sm-start">
-        <div class="container p-0">
+    <section class="bg-dark text-light p-lg-5 p-4 text-center text-sm-start">
+        <div class="container px-0 pt-4">
             <div class="d-sm-flex align-items-center justify-content-between">
                 <div class="w-lg-50 p-lg-5">
                     <h1>Programador <span class="text-warning"> Web</span></h1>
@@ -44,10 +47,22 @@
                         provident similique. Quae quibusdam necessitatibus fuga eaque sapiente molestiae! </p>
                         <button class="btn btn-lg btn-primary">Contacto</button>
                 </div>
-                <img class="img-fluid w-50 p-5 d-none d-sm-block" src="images/pc-design.png" alt="Dibujo de una pantalla de ordenador azul con fondo amarillo.">
+                <img class="img-fluid w-50 p-5 d-none d-sm-block" src="images/css-js-html.svg" alt="Dibujo de tres personas sosteniendo los logos de HTML5, CSS3 y Javascript.">
             </div>
         </div>
     </section>
+
+    <section class="bg-primary text-light p-lg-5 p-4">
+        <div class="container px-lg-5 p-0">
+            <div class="d-md-flex align-items-center justify-content-between py-lg-3">
+                <h3 class="mb-3 mb-md-0 text-center">Contacto:</h3>
+                <div class="input-group w-50">
+                    <input type="text" class="form-control" placeholder="Enter Email" />
+                    <button class="btn btn-dark btn-lg" type="button">Enviar</button>
+                </div>
+            </div>
+        </div>
+      </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
