navbar fixed top

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>diego-rg</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark lead p-0">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark lead p-0 fixed-top">
         <div class="container p-lg-5 p-4">
             <a class="navbar-brand fs-3" href="#">diego-rg</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -62,7 +62,22 @@
                 </div>
             </div>
         </div>
-      </section>
+    </section>
+
+    <section class="p-5">
+        <div class="container">
+            <h2 class="text-center">Proyectos</h2>
+            <div class="row text-center">
+                <div class="col-md p-5">
+                    <div class="card">
+
+                    </div>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat laborum accusamus, quis rerum deserunt quo numquam vitae non.</div>
+                <div class="col-md p-5">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat laborum accusamus, quis rerum deserunt quo numquam vitae non.</div>
+                <div class="col-md p-5">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat laborum accusamus, quis rerum deserunt quo numquam vitae non.</div>
+            </div>
+        </div>
+    </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
