--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
     <title>diego-rg</title>
 </head>
@@ -64,20 +65,75 @@
         </div>
     </section>
 
-    <section class="p-5">
-        <div class="container">
-            <h2 class="text-center">Proyectos</h2>
+    <section class="p-5" id="proyectos">
+        <div class="container p-2">
+            <h2 class="text-center pb-3">Proyectos</h2>
             <div class="row text-center">
-                <div class="col-md p-5">
-                    <div class="card">
-
+                <div class="col p-lg-5 py-4">
+                    <div class="card p-3">
+                        <img src="images/pc-design.png" class="card-img-top p-3" alt="Vista previa del proyecto 1.">
+                        <div class="card-body">
+                            <h5 class="card-title">Proyecto1</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Ver proyecto</a>
+                        </div>
                     </div>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat laborum accusamus, quis rerum deserunt quo numquam vitae non.</div>
-                <div class="col-md p-5">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat laborum accusamus, quis rerum deserunt quo numquam vitae non.</div>
-                <div class="col-md p-5">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat laborum accusamus, quis rerum deserunt quo numquam vitae non.</div>
+                </div>
+                <div class="col p-lg-5 py-4">
+                    <div class="card p-3">
+                        <img src="images/pc-design.png" class="card-img-top p-3" alt="Vista previa del proyecto 1.">
+                        <div class="card-body">
+                            <h5 class="card-title">Proyecto1</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Ver proyecto</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col p-lg-5 py-4">
+                    <div class="card p-3">
+                        <img src="images/pc-design.png" class="img-fluid card-img-top p-3" alt="Vista previa del proyecto 1.">
+                        <div class="card-body">
+                            <h5 class="card-title">Proyecto1</h5>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                            <a href="#" class="btn btn-primary">Ver proyecto</a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
+
+    <section class="p-lg-5 p-4 text-center text-sm-start" id="tecnologias">
+        <div class="container px-0">
+            <div class="d-sm-flex align-items-center justify-content-between">
+                <div class="w-lg-50 p-lg-5">
+                    <h1>Tecnologías:</h1>
+                    <ul class="list-group list-group-flush lead">
+                        <li class="list-group-item">An item</li>
+                        <li class="list-group-item">A second item</li>
+                        <li class="list-group-item">A third item</li>
+                        <li class="list-group-item">A fourth item</li>
+                        <li class="list-group-item">And a fifth one</li>
+                        <li class="list-group-item">An item</li>
+                        <li class="list-group-item">A second item</li>
+                        <li class="list-group-item">A third item</li>
+                        <li class="list-group-item">A fourth item</li>
+                        <li class="list-group-item">And a fifth one</li>
+                      </ul>
+                </div>
+                <img class="img-fluid w-50 p-5 d-none d-sm-block" src="images/css-js-html.svg" alt="Dibujo de tres personas sosteniendo los logos de HTML5, CSS3 y Javascript.">
+            </div>
+        </div>
+    </section>
+
+    <footer class="p-5 bg-dark text-white text-center position-relative">
+        <div class="container">
+          <p class="lead">&copy; 2021 diego-rg</p>
+          <a href="#" class="position-absolute bottom-0 end-0 p-5">
+            <i class="bi bi-arrow-up-circle h1"></i>
+          </a>
+        </div>
+      </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
