--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <title>diego-rg</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark lead p-0 fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark lead p-0">
         <div class="container p-lg-5 p-4">
             <a class="navbar-brand fs-3" href="#">diego-rg</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,9 +23,6 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#sobremi">Sobre mí</a>
-                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#tecnologias">Tecnologías</a>
                     </li>
@@ -39,6 +37,8 @@
         </div>
     </nav>
 
+
+
     <section class="bg-dark text-light p-lg-5 p-4 text-center text-sm-start">
         <div class="container px-0 pt-4">
             <div class="d-sm-flex align-items-center justify-content-between">
@@ -46,24 +46,13 @@
                     <h1>Programador <span class="text-warning"> Web</span></h1>
                     <p class="lead my-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores hic, alias eveniet, recusandae, architecto ratione dolore illo at quam sit officiis 
                         provident similique. Quae quibusdam necessitatibus fuga eaque sapiente molestiae! </p>
-                        <button class="btn btn-lg btn-primary">Contacto</button>
                 </div>
                 <img class="img-fluid w-50 p-5 d-none d-sm-block" src="images/css-js-html.svg" alt="Dibujo de tres personas sosteniendo los logos de HTML5, CSS3 y Javascript.">
             </div>
         </div>
     </section>
 
-    <section class="bg-primary text-light p-lg-5 p-4">
-        <div class="container px-lg-5 p-0">
-            <div class="d-md-flex align-items-center justify-content-between py-lg-3">
-                <h3 class="mb-3 mb-md-0 text-center">Contacto:</h3>
-                <div class="input-group w-50">
-                    <input type="text" class="form-control" placeholder="Enter Email" />
-                    <button class="btn btn-dark btn-lg" type="button">Enviar</button>
-                </div>
-            </div>
-        </div>
-    </section>
+
 
     <section class="p-5" id="proyectos">
         <div class="container p-2">
@@ -103,11 +92,13 @@
         </div>
     </section>
 
+
+
     <section class="p-lg-5 p-4 text-center text-sm-start" id="tecnologias">
         <div class="container px-0">
             <div class="d-sm-flex align-items-center justify-content-between">
                 <div class="w-lg-50 p-lg-5">
-                    <h1>Tecnologías:</h1>
+                    <h2>Tecnologías:</h2>
                     <ul class="list-group list-group-flush lead">
                         <li class="list-group-item">An item</li>
                         <li class="list-group-item">A second item</li>
@@ -125,6 +116,43 @@
             </div>
         </div>
     </section>
+    
+
+
+    <section class="bg-primary text-light p-lg-5 p-4">
+        <div class="container px-lg-5 p-0">
+            <div class="d-md-flex align-items-center justify-content-between py-lg-3">
+                <h3 class="mb-3 mb-md-0 text-center">Contacto:</h3>
+                <div class="input-group w-50">
+                    <input type="text" class="form-control" placeholder="Enter Email" />
+                    <button class="btn btn-dark btn-lg" type="button">Enviar</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+    <section class="p-5">
+        <div class="p-lg-5 text-center">
+            <div class="row">
+                <div class="col p-lg-5 py-4">
+                    <a href="https://stackoverflow.com/questions/11124777/twitter-bootstrap-navbar-fixed-top-overlapping-site"><img height="50px" src="images/email.svg" alt=""></a>
+                </div>
+                <div class="col p-lg-5 py-4">
+                    <a href="https://stackoverflow.com/questions/11124777/twitter-bootstrap-navbar-fixed-top-overlapping-site"><img height="50px" src="images/github.svg" alt=""></a>
+                </div>
+                <div class="col p-lg-5 py-4">
+                    <a href="https://stackoverflow.com/questions/11124777/twitter-bootstrap-navbar-fixed-top-overlapping-site"><img height="50px" src="images/linkedin.svg" alt=""></a>
+                </div>
+                <div class="col p-lg-5 py-4">
+                    <a href="https://stackoverflow.com/questions/11124777/twitter-bootstrap-navbar-fixed-top-overlapping-site"><img height="50px" src="images/stackoverflow.svg" alt=""></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 
     <footer class="p-5 bg-dark text-white text-center position-relative">
         <div class="container">
