changed structure, added images

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
 
-    <section class="bg-dark text-light p-lg-5 p-4 text-center text-sm-start">
+    <section class="bg-dark text-light p-lg-5 p-4 text-center text-sm-start" id="intro">
         <div class="container px-0 pt-4">
             <div class="d-sm-flex align-items-center justify-content-between">
                 <div class="w-lg-50 p-lg-5">
@@ -47,7 +47,31 @@
                     <p class="lead my-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores hic, alias eveniet, recusandae, architecto ratione dolore illo at quam sit officiis 
                         provident similique. Quae quibusdam necessitatibus fuga eaque sapiente molestiae! </p>
                 </div>
+                <img class="img-fluid w-50 p-5" src="images/css-js-html.svg" alt="Dibujo de tres personas sosteniendo los logos de HTML5, CSS3 y Javascript.">
+            </div>
+        </div>
+    </section>
+
+
+    <section class="p-lg-5 p-4" id="tecnologias">
+        <div class="container px-0">
+            <div class="d-sm-flex align-items-center justify-content-between text-center">
                 <img class="img-fluid w-50 p-5 d-none d-sm-block" src="images/css-js-html.svg" alt="Dibujo de tres personas sosteniendo los logos de HTML5, CSS3 y Javascript.">
+                <div class="w-lg-50 p-lg-5">
+                    <h2>Tecnologías:</h2>
+                    <ul class="list-group list-group-flush lead">
+                        <li class="list-group-item">An item</li>
+                        <li class="list-group-item">A second item</li>
+                        <li class="list-group-item">A third item</li>
+                        <li class="list-group-item">A fourth item</li>
+                        <li class="list-group-item">And a fifth one</li>
+                        <li class="list-group-item">An item</li>
+                        <li class="list-group-item">A second item</li>
+                        <li class="list-group-item">A third item</li>
+                        <li class="list-group-item">A fourth item</li>
+                        <li class="list-group-item">And a fifth one</li>
+                      </ul>
+                </div>
             </div>
         </div>
     </section>
@@ -94,32 +118,7 @@
 
 
 
-    <section class="p-lg-5 p-4 text-center text-sm-start" id="tecnologias">
-        <div class="container px-0">
-            <div class="d-sm-flex align-items-center justify-content-between">
-                <div class="w-lg-50 p-lg-5">
-                    <h2>Tecnologías:</h2>
-                    <ul class="list-group list-group-flush lead">
-                        <li class="list-group-item">An item</li>
-                        <li class="list-group-item">A second item</li>
-                        <li class="list-group-item">A third item</li>
-                        <li class="list-group-item">A fourth item</li>
-                        <li class="list-group-item">And a fifth one</li>
-                        <li class="list-group-item">An item</li>
-                        <li class="list-group-item">A second item</li>
-                        <li class="list-group-item">A third item</li>
-                        <li class="list-group-item">A fourth item</li>
-                        <li class="list-group-item">And a fifth one</li>
-                      </ul>
-                </div>
-                <img class="img-fluid w-50 p-5 d-none d-sm-block" src="images/css-js-html.svg" alt="Dibujo de tres personas sosteniendo los logos de HTML5, CSS3 y Javascript.">
-            </div>
-        </div>
-    </section>
-    
-
-
-    <section class="bg-primary text-light p-lg-5 p-4">
+    <section class="bg-primary text-light p-lg-5 p-4" id="contacto">
         <div class="container px-lg-5 p-0">
             <div class="d-md-flex align-items-center justify-content-between py-lg-3">
                 <h3 class="mb-3 mb-md-0 text-center">Contacto:</h3>
