--- a/index.html
+++ b/index.html
@@ -40,36 +40,49 @@
 
 
     <section class="bg-dark text-light p-lg-5 p-4 text-center text-sm-start" id="intro">
-        <div class="container px-0 pt-4">
-            <div class="d-sm-flex align-items-center justify-content-between">
+        <div class="container px-0 p-lg-2">
+            <div class="d-sm-flex align-items-center justify-content-between p-lg-1">
                 <div class="w-lg-50 p-lg-5">
                     <h1>Programador <span class="text-warning"> Web</span></h1>
                     <p class="lead my-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores hic, alias eveniet, recusandae, architecto ratione dolore illo at quam sit officiis 
                         provident similique. Quae quibusdam necessitatibus fuga eaque sapiente molestiae! </p>
                 </div>
-                <img class="img-fluid w-50 p-5" src="images/css-js-html.svg" alt="Dibujo de tres personas sosteniendo los logos de HTML5, CSS3 y Javascript.">
+                <img class="img-fluid w-50 p-5" src="images/programming.svg" alt="Dibujo de tres personas sosteniendo los logos de HTML5, CSS3 y Javascript.">
+            </div>
+        </div>
+    </section>
+
+
+    <section class="bg-primary text-light p-lg-5 p-4">
+        <div class="container px-lg-5 p-0">
+            <div class="d-md-flex align-items-center justify-content-between py-lg-3">
+                <h3 class="mb-3 mb-md-0 text-center">Contacto:</h3>
+                <div class="input-group w-50">
+                    <input type="text" class="form-control" placeholder="Enter Email" />
+                    <button class="btn btn-dark btn-lg" type="button">Enviar</button>
+                </div>
             </div>
         </div>
     </section>
 
 
     <section class="p-lg-5 p-4" id="tecnologias">
-        <div class="container px-0">
-            <div class="d-sm-flex align-items-center justify-content-between text-center">
+        <div class="container p-lg-3">
+            <div class="d-sm-flex align-items-center justify-content-between text-center p-lg-1">
                 <img class="img-fluid w-50 p-5 d-none d-sm-block" src="images/css-js-html.svg" alt="Dibujo de tres personas sosteniendo los logos de HTML5, CSS3 y Javascript.">
                 <div class="w-lg-50 p-lg-5">
-                    <h2>Tecnologías:</h2>
+                    <h2 class="pb-3">Tecnologías:</h2>
                     <ul class="list-group list-group-flush lead">
-                        <li class="list-group-item">An item</li>
-                        <li class="list-group-item">A second item</li>
-                        <li class="list-group-item">A third item</li>
-                        <li class="list-group-item">A fourth item</li>
-                        <li class="list-group-item">And a fifth one</li>
-                        <li class="list-group-item">An item</li>
-                        <li class="list-group-item">A second item</li>
-                        <li class="list-group-item">A third item</li>
-                        <li class="list-group-item">A fourth item</li>
-                        <li class="list-group-item">And a fifth one</li>
+                        <li class="list-group-item">HTML5</li>
+                        <li class="list-group-item">CSS3</li>
+                        <li class="list-group-item">Bootstrap</li>
+                        <li class="list-group-item">Javascript</li>
+                        <li class="list-group-item">Node</li>
+                        <li class="list-group-item">Express</li>
+                        <li class="list-group-item">EJS</li>
+                        <li class="list-group-item">REST</li>
+                        <li class="list-group-item">MongoDB</li>
+                        <li class="list-group-item">Mongoose</li>
                       </ul>
                 </div>
             </div>
@@ -78,9 +91,22 @@
 
 
 
+    <section class="bg-dark text-light p-lg-5 p-4">
+        <div class="container px-lg-5 p-0">
+            <div class="d-md-flex align-items-center justify-content-between py-lg-3">
+                <h3 class="mb-3 mb-md-0 text-center">Contacto:</h3>
+                <div class="input-group w-50">
+                    <input type="text" class="form-control" placeholder="Enter Email" />
+                    <button class="btn btn-dark btn-lg" type="button">Enviar</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
     <section class="p-5" id="proyectos">
-        <div class="container p-2">
-            <h2 class="text-center pb-3">Proyectos</h2>
+        <div class="container">
+            <h2 class="text-center">Proyectos</h2>
             <div class="row text-center">
                 <div class="col p-lg-5 py-4">
                     <div class="card p-3">
@@ -135,6 +161,9 @@
     <section class="p-5">
         <div class="p-lg-5 text-center">
             <div class="row">
+                <h3 class="mb-3 mb-md-0 pb-5">Contacto:</h3>
+            </div>
+            <div class="row">
                 <div class="col p-lg-5 py-4">
                     <a href="https://stackoverflow.com/questions/11124777/twitter-bootstrap-navbar-fixed-top-overlapping-site"><img height="50px" src="images/email.svg" alt=""></a>
                 </div>
@@ -155,12 +184,12 @@
 
     <footer class="p-5 bg-dark text-white text-center position-relative">
         <div class="container">
-          <p class="lead">&copy; 2021 diego-rg</p>
-          <a href="#" class="position-absolute bottom-0 end-0 p-5">
-            <i class="bi bi-arrow-up-circle h1"></i>
-          </a>
+            <p class="lead">&copy; 2021 diego-rg</p>
+            <a href="#" class="position-absolute bottom-0 end-0 p-5">
+                <i class="bi bi-arrow-up-circle h1"></i>
+            </a>
         </div>
-      </footer>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" 
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
