added icons and projects

--- a/index.html
+++ b/index.html
@@ -54,13 +54,12 @@
 
 
     <section class="bg-primary text-light p-lg-5 p-4">
-        <div class="container px-lg-5 p-0">
-            <div class="d-md-flex align-items-center justify-content-between py-lg-3">
-                <h3 class="mb-3 mb-md-0 text-center">Contacto:</h3>
-                <div class="input-group w-50">
-                    <input type="text" class="form-control" placeholder="Enter Email" />
-                    <button class="btn btn-dark btn-lg" type="button">Enviar</button>
-                </div>
+        <div class="row text-center">
+            <div class="col">
+                <a href="mailto:diego_thegarden@hotmail.com" class="text-light"><i class="bi bi-envelope h1"></i></a>
+            </div>
+            <div class="col">
+                <a href="#tecnologias" class="text-light"><i class="bi bi-arrow-down-circle h1"></i></a>
             </div>
         </div>
     </section>
@@ -92,13 +91,21 @@
 
 
     <section class="bg-dark text-light p-lg-5 p-4">
-        <div class="container px-lg-5 p-0">
-            <div class="d-md-flex align-items-center justify-content-between py-lg-3">
-                <h3 class="mb-3 mb-md-0 text-center">Contacto:</h3>
-                <div class="input-group w-50">
-                    <input type="text" class="form-control" placeholder="Enter Email" />
-                    <button class="btn btn-dark btn-lg" type="button">Enviar</button>
-                </div>
+        <div class="row">
+            <div class="col px-lg-5 p-0">
+                <img src="images/HTML-5-01.svg" class="w-50" alt="Logo de HTML5">
+            </div>
+            <div class="col px-lg-5 p-0">
+                <img src="images/CSS-3-01.svg" class="w-50" alt="Logo de CSS3">
+            </div>
+            <div class="col px-lg-5 p-0">
+                <img src="images/JavaScript-01.svg" class="w-50" alt="Logo de Javascript">
+            </div>
+            <div class="col px-lg-5 p-0">
+                <img src="images/Node-JS-01.svg" class="w-50" alt="Logo de Node">
+            </div>
+            <div class="col px-lg-5 p-0">
+                <img src="images/Npm-01.svg" class="w-50" alt="Logo de npm">
             </div>
         </div>
     </section>
@@ -108,33 +115,33 @@
         <div class="container">
             <h2 class="text-center">Proyectos</h2>
             <div class="row text-center">
-                <div class="col p-lg-5 py-4">
+                <div class="col-md p-lg-5 py-4">
                     <div class="card p-3">
-                        <img src="images/pc-design.png" class="card-img-top p-3" alt="Vista previa del proyecto 1.">
+                        <img src="images/nono.PNG" class="card-img-top p-1" alt="Vista previa del proyecto 1.">
                         <div class="card-body">
-                            <h5 class="card-title">Proyecto1</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Ver proyecto</a>
+                            <h5 class="card-title">NoNo</h5>
+                            <p class="card-text">Aplicación que permite obtener información de sonidos para uso audiológico. Stack: Node /Express /MongoDB /EJS /Bootstrap.</p>
+                            <a href="https://github.com/diego-rg/nono-audiologia" class="btn btn-primary">Ver proyecto</a>
                         </div>
                     </div>
                 </div>
-                <div class="col p-lg-5 py-4">
+                <div class="col-md p-lg-5 py-4">
                     <div class="card p-3">
-                        <img src="images/pc-design.png" class="card-img-top p-3" alt="Vista previa del proyecto 1.">
+                        <img src="images/Mettech.PNG" class="card-img-top p-1" alt="Vista previa del proyecto 1.">
                         <div class="card-body">
-                            <h5 class="card-title">Proyecto1</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Ver proyecto</a>
+                            <h5 class="card-title">Mettech</h5>
+                            <p class="card-text">Página web comercial para unha empresa ficticia de fabricación de elementos metálicos. Realizada con Bootstrap.</p>
+                            <a href="https://diego-rg.github.io/mettech-bootstrap/" class="btn btn-primary">Ver proyecto</a>
                         </div>
                     </div>
                 </div>
-                <div class="col p-lg-5 py-4">
+                <div class="col-md p-lg-5 py-4">
                     <div class="card p-3">
-                        <img src="images/pc-design.png" class="img-fluid card-img-top p-3" alt="Vista previa del proyecto 1.">
+                        <img src="images/color-game.PNG" class="card-img-top p-1" alt="Vista previa del proyecto 1.">
                         <div class="card-body">
-                            <h5 class="card-title">Proyecto1</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Ver proyecto</a>
+                            <h5 class="card-title">Color Game</h5>
+                            <p class="card-text">Juego donde el usuario debe seleccionar el color que se indica en formato RGB. hecha con HTML/CSS/Javascript vanilla.</p>
+                            <a href="https://diego-rg.github.io/color-guessing-game/" class="btn btn-primary">Ver proyecto</a>
                         </div>
                     </div>
                 </div>
@@ -165,16 +172,16 @@
             </div>
             <div class="row">
                 <div class="col p-lg-5 py-4">
-                    <a href="https://stackoverflow.com/questions/11124777/twitter-bootstrap-navbar-fixed-top-overlapping-site"><img height="50px" src="images/email.svg" alt=""></a>
+                    <a href="mailto:diego_thegarden@hotmail.com"><img height="50px" src="images/email.svg" alt=""></a>
                 </div>
                 <div class="col p-lg-5 py-4">
-                    <a href="https://stackoverflow.com/questions/11124777/twitter-bootstrap-navbar-fixed-top-overlapping-site"><img height="50px" src="images/github.svg" alt=""></a>
+                    <a href="https://github.com/diego-rg"><img height="50px" src="images/github.svg" alt=""></a>
                 </div>
                 <div class="col p-lg-5 py-4">
-                    <a href="https://stackoverflow.com/questions/11124777/twitter-bootstrap-navbar-fixed-top-overlapping-site"><img height="50px" src="images/linkedin.svg" alt=""></a>
+                    <a href="https://es.linkedin.com"><img height="50px" src="images/linkedin.svg" alt=""></a>
                 </div>
                 <div class="col p-lg-5 py-4">
-                    <a href="https://stackoverflow.com/questions/11124777/twitter-bootstrap-navbar-fixed-top-overlapping-site"><img height="50px" src="images/stackoverflow.svg" alt=""></a>
+                    <a href="https://stackoverflow.com/users/14882708/diego-rg"><img height="50px" src="images/stackoverflow.svg" alt=""></a>
                 </div>
             </div>
         </div>
@@ -185,9 +192,7 @@
     <footer class="p-5 bg-dark text-white text-center position-relative">
         <div class="container">
             <p class="lead">&copy; 2021 diego-rg</p>
-            <a href="#" class="position-absolute bottom-0 end-0 p-5">
-                <i class="bi bi-arrow-up-circle h1"></i>
-            </a>
+            <a href="#" class="position-absolute bottom-0 end-0 p-5"><i class="bi bi-arrow-up-circle h1"></i></a>
         </div>
     </footer>
 
