deleted contact duplicates

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
     <section class="bg-dark text-light p-lg-5 p-4 text-center text-sm-start" id="intro">
-        <div class="container px-0 p-lg-2">
+        <div class="container px-0 p-2">
             <div class="d-sm-flex align-items-center justify-content-between p-lg-1">
                 <div class="w-lg-50 p-lg-5">
                     <h1>Programador <span class="text-warning"> Web</span></h1>
@@ -54,7 +54,7 @@
 
 
     <section class="bg-primary text-light p-lg-5 p-4">
-        <div class="row text-center">
+        <div class="row text-center p-4">
             <div class="col">
                 <a href="mailto:diego_thegarden@hotmail.com" class="text-light"><i class="bi bi-envelope h1"></i></a>
             </div>
@@ -69,7 +69,7 @@
         <div class="container p-lg-3">
             <div class="d-sm-flex align-items-center justify-content-between text-center p-lg-1">
                 <img class="img-fluid w-50 p-5 d-none d-sm-block" src="images/css-js-html.svg" alt="Dibujo de tres personas sosteniendo los logos de HTML5, CSS3 y Javascript.">
-                <div class="w-lg-50 p-lg-5">
+                <div class="w-lg-50 p-lg-4">
                     <h2 class="pb-3">Tecnologías:</h2>
                     <ul class="list-group list-group-flush lead">
                         <li class="list-group-item">HTML5</li>
@@ -82,6 +82,7 @@
                         <li class="list-group-item">REST</li>
                         <li class="list-group-item">MongoDB</li>
                         <li class="list-group-item">Mongoose</li>
+                        <li class="list-group-item">VSCode</li>
                       </ul>
                 </div>
             </div>
@@ -91,29 +92,21 @@
 
 
     <section class="bg-dark text-light p-lg-5 p-4">
-        <div class="row">
-            <div class="col px-lg-5 p-0">
-                <img src="images/HTML-5-01.svg" class="w-50" alt="Logo de HTML5">
+        <div class="row text-center p-4">
+            <div class="col">
+                <a href="mailto:diego_thegarden@hotmail.com" class="text-light"><i class="bi bi-envelope h1"></i></a>
             </div>
-            <div class="col px-lg-5 p-0">
-                <img src="images/CSS-3-01.svg" class="w-50" alt="Logo de CSS3">
-            </div>
-            <div class="col px-lg-5 p-0">
-                <img src="images/JavaScript-01.svg" class="w-50" alt="Logo de Javascript">
-            </div>
-            <div class="col px-lg-5 p-0">
-                <img src="images/Node-JS-01.svg" class="w-50" alt="Logo de Node">
-            </div>
-            <div class="col px-lg-5 p-0">
-                <img src="images/Npm-01.svg" class="w-50" alt="Logo de npm">
+            <div class="col">
+                <a href="#proyectos" class="text-light"><i class="bi bi-arrow-down-circle h1"></i></a>
             </div>
         </div>
     </section>
 
 
+
     <section class="p-5" id="proyectos">
-        <div class="container">
-            <h2 class="text-center">Proyectos</h2>
+        <div class="container p-lg-2">
+            <h2 class="text-center p-lg-4">Proyectos</h2>
             <div class="row text-center">
                 <div class="col-md p-lg-5 py-4">
                     <div class="card p-3">
@@ -151,14 +144,22 @@
 
 
 
-    <section class="bg-primary text-light p-lg-5 p-4" id="contacto">
-        <div class="container px-lg-5 p-0">
-            <div class="d-md-flex align-items-center justify-content-between py-lg-3">
-                <h3 class="mb-3 mb-md-0 text-center">Contacto:</h3>
-                <div class="input-group w-50">
-                    <input type="text" class="form-control" placeholder="Enter Email" />
-                    <button class="btn btn-dark btn-lg" type="button">Enviar</button>
-                </div>
+    <section class="bg-dark text-light p-lg-5 p-4">
+        <div class="row text-center">
+            <div class="col px-lg-5 p-0">
+                <img src="images/HTML-5-01.svg" class="w-50" alt="Logo de HTML5">
+            </div>
+            <div class="col px-lg-5 p-0">
+                <img src="images/CSS-3-01.svg" class="w-50" alt="Logo de CSS3">
+            </div>
+            <div class="col px-lg-5 p-0">
+                <img src="images/JavaScript-01.svg" class="w-50" alt="Logo de Javascript">
+            </div>
+            <div class="col px-lg-5 p-0">
+                <img src="images/Node-JS-01.svg" class="w-50" alt="Logo de Node">
+            </div>
+            <div class="col px-lg-5 p-0">
+                <img src="images/Npm-01.svg" class="w-50" alt="Logo de npm">
             </div>
         </div>
     </section>
@@ -188,7 +189,7 @@
     </section>
 
 
-
+    
     <footer class="p-5 bg-dark text-white text-center position-relative">
         <div class="container">
             <p class="lead">&copy; 2021 diego-rg</p>
