--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <title>diego-rg</title>
 </head>
 <body>
+    <!--Menú de navegación-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark lead p-0">
         <div class="container p-lg-5 p-4">
             <a class="navbar-brand fs-3" href="#">diego-rg</a>
@@ -37,12 +38,11 @@
         </div>
     </nav>
 
-
-
+    <!--Sección Introducción-->
     <section class="bg-dark text-light p-lg-5 p-4 text-center text-sm-start" id="intro">
         <div class="container px-0 p-2">
             <div class="d-sm-flex align-items-center justify-content-between p-lg-1">
-                <div class="w-lg-50 p-lg-5">
+                <div class="p-lg-5">
                     <h1>Programador <span class="text-warning"> Web</span></h1>
                     <p class="lead my-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores hic, alias eveniet, recusandae, architecto ratione dolore illo at quam sit officiis 
                         provident similique. Quae quibusdam necessitatibus fuga eaque sapiente molestiae! </p>
@@ -52,7 +52,7 @@
         </div>
     </section>
 
-
+    <!--Separador 1-->
     <section class="bg-primary text-light p-lg-5 p-4">
         <div class="row text-center p-4">
             <div class="col">
@@ -64,7 +64,7 @@
         </div>
     </section>
 
-
+    <!--Sección Tecnologías-->
     <section class="p-lg-5 p-4" id="tecnologias">
         <div class="container p-lg-3">
             <div class="d-sm-flex align-items-center justify-content-between text-center p-lg-1">
@@ -89,12 +89,11 @@
         </div>
     </section>
 
-
-
+    <!--Separador 2-->
     <section class="bg-dark text-light p-lg-5 p-4">
         <div class="row text-center p-4">
             <div class="col">
-                <a href="mailto:diego_thegarden@hotmail.com" class="text-light"><i class="bi bi-envelope h1"></i></a>
+                <a href="#" class="text-light"><i class="bi bi-arrow-up-circle h1"></i></a>
             </div>
             <div class="col">
                 <a href="#proyectos" class="text-light"><i class="bi bi-arrow-down-circle h1"></i></a>
@@ -102,14 +101,13 @@
         </div>
     </section>
 
-
-
+    <!--Sección Proyectos-->
     <section class="p-5" id="proyectos">
-        <div class="container p-lg-2">
+        <div class="container p-lg-4">
             <h2 class="text-center p-lg-4">Proyectos</h2>
             <div class="row text-center">
                 <div class="col-md p-lg-5 py-4">
-                    <div class="card p-3">
+                    <div class="card p-4">
                         <img src="images/nono.PNG" class="card-img-top p-1" alt="Vista previa del proyecto 1.">
                         <div class="card-body">
                             <h5 class="card-title">NoNo</h5>
@@ -119,7 +117,7 @@
                     </div>
                 </div>
                 <div class="col-md p-lg-5 py-4">
-                    <div class="card p-3">
+                    <div class="card p-4">
                         <img src="images/Mettech.PNG" class="card-img-top p-1" alt="Vista previa del proyecto 1.">
                         <div class="card-body">
                             <h5 class="card-title">Mettech</h5>
@@ -129,7 +127,7 @@
                     </div>
                 </div>
                 <div class="col-md p-lg-5 py-4">
-                    <div class="card p-3">
+                    <div class="card p-4">
                         <img src="images/color-game.PNG" class="card-img-top p-1" alt="Vista previa del proyecto 1.">
                         <div class="card-body">
                             <h5 class="card-title">Color Game</h5>
@@ -142,9 +140,20 @@
         </div>
     </section>
 
+    <!--Separador 3-->
+    <section class="bg-primary text-light p-lg-5 p-4">
+        <div class="row text-center p-4">
+            <div class="col">
+                <a href="#tecnologias" class="text-light"><i class="bi bi-arrow-up-circle h1"></i></a>
+            </div>
+            <div class="col">
+                <a href="#contacto" class="text-light"><i class="bi bi-arrow-down-circle h1"></i></a>
+            </div>
+        </div>
+    </section>
 
-
-    <section class="bg-dark text-light p-lg-5 p-4">
+    <!--Separador 4-->
+    <section class="bg-light text-light p-lg-5 p-4">
         <div class="row text-center">
             <div class="col px-lg-5 p-0">
                 <img src="images/HTML-5-01.svg" class="w-50" alt="Logo de HTML5">
@@ -164,9 +173,8 @@
         </div>
     </section>
 
-
-
-    <section class="p-5">
+    <!--Sección Contacto-->
+    <section class="p-5" id="contacto">
         <div class="p-lg-5 text-center">
             <div class="row">
                 <h3 class="mb-3 mb-md-0 pb-5">Contacto:</h3>
@@ -189,7 +197,7 @@
     </section>
 
 
-    
+    <!--Footer-->
     <footer class="p-5 bg-dark text-white text-center position-relative">
         <div class="container">
             <p class="lead">&copy; 2021 diego-rg</p>
