--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" 
     rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <style>body {
+        font-family: 'Noto Sans', sans-serif;
+    }</style>
     <title>diego-rg</title>
 </head>
 <body>
@@ -41,7 +43,7 @@
     <!--Sección Introducción-->
     <section class="bg-dark text-light p-lg-5 p-4 text-center text-sm-start" id="intro">
         <div class="container px-0 p-2">
-            <div class="d-sm-flex align-items-center justify-content-between p-lg-1">
+            <div class="d-sm-flex align-items-center justify-content-between">
                 <div class="p-lg-5">
                     <h1>Programador <span class="text-warning"> Web</span></h1>
                     <p class="lead my-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores hic, alias eveniet, recusandae, architecto ratione dolore illo at quam sit officiis 
