--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!--Menú de navegación-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark lead p-0">
         <div class="container p-lg-5 p-4">
-            <a class="navbar-brand fs-3" href="#">diego-rg</a>
+            <a class="navbar-brand fs-3 fst-italic" href="#">diego-rg</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -107,13 +107,13 @@
     <section class="p-5" id="proyectos">
         <div class="container p-lg-4">
             <h2 class="text-center p-lg-4 fst-italic fw-bold">Proyectos</h2>
-            <div class="row text-center">
+            <div class="row text-center p-lg-1">
                 <div class="col-md p-lg-5 py-4">
                     <div class="card p-4">
                         <img src="images/nono.PNG" class="card-img-top p-1" alt="Vista previa del proyecto NoNo.">
                         <div class="card-body">
                             <h5 class="card-title">NoNo</h5>
-                            <p class="card-text">Aplicación que permite obtener información de sonidos para uso audiológico. Stack: Node /Express /MongoDB /EJS /Bootstrap.</p>
+                            <p class="card-text">Aplicación de audiología con datos de sonidos. Stack: Node /Express /MongoDB /EJS /Bootstrap.</p>
                             <a href="https://github.com/diego-rg/nono-audiologia" class="btn btn-primary">Ver proyecto</a>
                         </div>
                     </div>
@@ -146,7 +146,7 @@
     <section class="bg-primary text-light p-lg-5 p-4">
         <div class="row text-center p-4">
             <div class="col">
-                <a href="#tecnologias" class="text-light"><i class="bi bi-arrow-up-circle h1"></i></a>
+                <a href="#proyectos" class="text-light"><i class="bi bi-arrow-up-circle h1"></i></a>
             </div>
             <div class="col">
                 <a href="#contacto" class="text-light"><i class="bi bi-arrow-down-circle h1"></i></a>
