changed url to heroku project nono

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                         <div class="card-body">
                             <h5 class="card-title">NoNo</h5>
                             <p class="card-text">Aplicación de audiología con datos de sonidos. Stack: Node /Express /MongoDB /EJS /Bootstrap.</p>
-                            <a href="https://github.com/diego-rg/nono-audiologia" class="btn btn-primary">Ver proyecto</a>
+                            <a href="https://nono-audiologia.herokuapp.com/" class="btn btn-primary">Ver proyecto</a>
                         </div>
                     </div>
                 </div>
