--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
     <section class="bg-primary text-light p-lg-5 p-4">
         <div class="row text-center p-4">
             <div class="col">
-                <a href="#proyectos" class="text-light"><i class="bi bi-arrow-up-circle h1"></i></a>
+                <a href="#tecnologias" class="text-light"><i class="bi bi-arrow-up-circle h1"></i></a>
             </div>
             <div class="col">
                 <a href="#contacto" class="text-light"><i class="bi bi-arrow-down-circle h1"></i></a>
